syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.chavepix";
option java_outer_classname = "KeyManagerGrpc";


package br.com.zup.chavepix;

service KeyManagerGrpcService {
  rpc criaChavePix (ChavePixRequest) returns (ChavePixResponse) {}
}

//Cria a chave PIX
message ChavePixRequest {

  string clienteId = 1;
  TipoDeChave tipoDeChave = 2;
  TipoConta tipoConta = 3;
  string valorChave = 4;

  enum TipoDeChave{
    DESCONHECIDO = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
  }
  enum TipoConta{
    CONTA_DESCONHECIDO = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
  }

}
message ChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

//remove chave pix
service RemoveChavePixGrpcService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}
message RemoveChavePixRequest {

  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
}